src/objects/Case_Product__c.object
<CustomObject>
    <description>Junction table that relates a Product to a Case</description>
    <fields>
        <fullName>ACR_Info__c</fullName>
        <label>ACR Info</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACR_Return_Type__c</fullName>
        <description>Return types supported by matching ACR:
Digital = Digital + Physical 
Physical = Physical only</description>
        <inlineHelpText>Return types supported by matching ACR:
•Digital = Digital + Physical 
•Physical = Physical only</inlineHelpText>
        <label>ACR Return Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>ACR_Return_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CCM_Retreival_Request__c</fullName>
        <defaultValue>false</defaultValue>
        <description>ALM 662</description>
        <label>CCM Retreival Request</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CCM_Task_ID__c</fullName>
        <description>This is the CCM task ID.</description>
        <externalId>true</externalId>
        <label>CCM Task ID</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Case Products</relationshipLabel>
        <relationshipName>Case_Products</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Change_Reason__c</fullName>
        <label>Change Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Wrong Product Selected</fullName>
                </value>
                <value>
                    <fullName>More Detail from Consumer</fullName>
                </value>
                <value>
                    <fullName>Lower Level Available</fullName>
                </value>
                <value>
                    <fullName>Product Received</fullName>
                </value>
                <value>
                    <fullName>Based on Production Code</fullName>
                </value>
                <value>
                    <fullName>Initial Value</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Changed_By__c</fullName>
        <label>Changed By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consumer_Facing_Brand__c</fullName>
        <formula>Local_Product__r.Consumer_Facing_Brand__c</formula>
        <label>Consumer Facing Brand</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consumer_Production_Code_Status__c</fullName>
        <label>Consumer Production Code Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Consumer Verified</fullName>
                </value>
                <value>
                    <fullName>Not Readable</fullName>
                </value>
                <value>
                    <fullName>Not Available</fullName>
                </value>
                <value>
                    <fullName>Cannot Find</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Country_of_Purchase__c</fullName>
        <formula>Local_Product__r.Country__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Country of Purchase</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Digital_Return_Id__c</fullName>
        <description>Unique Id generated for digital return form, set by code</description>
        <externalId>true</externalId>
        <inlineHelpText>Unique Id generated for digital return form, set by code</inlineHelpText>
        <label>Digital Return Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Digital_Returns_Link__c</fullName>
        <formula>$Setup.Global_Org_Settings__c.Base_Site_URL__c+&quot;ContactUs/siteDPRUploadForm?uid=&quot;+ Digital_Return_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Digital Returns Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expiration_Date__c</fullName>
        <description>This is the date that this record Expires.</description>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GCR_LPID__c</fullName>
        <formula>Local_Product__r.GCR_LPID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GCR LPID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GCR_Product_ID__c</fullName>
        <description>Pulled from the Global Product. GCR identifier. It is the external ID used by C3DB and SFDC.</description>
        <formula>Local_Product__r.Global_Product__r.GCR_Product_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Pulled from the Global Product. GCR identifier. It is the external ID used by C3DB and SFDC.</inlineHelpText>
        <label>GCR Product ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GTIN_Number__c</fullName>
        <description>Deprecated. Do Not Use!</description>
        <formula>Local_Product__r.GTIN_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Deprecated. Do Not Use!</inlineHelpText>
        <label>Barcode (GTIN) deprecated</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GTIN__c</fullName>
        <description>The GTIN of the selected product. Only populated if the agents picks the product at the from the GTIN object.</description>
        <inlineHelpText>The GTIN of the selected product. Only populated if the agents picks the product at the from the GTIN object.</inlineHelpText>
        <label>GTIN</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Global_Product_ID__c</fullName>
        <description>This is the Salesforce ID of the Global Product that this case product is associated with.</description>
        <formula>Local_Product__r.Global_Product__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Global Product ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Global_Product_Path__c</fullName>
        <formula>Local_Product__r.Global_Product__r.Path__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Global Product Path</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPMS__c</fullName>
        <description>The IPMS of the selected product. Only populated if the agents picks the product at the from the IPMS object.</description>
        <inlineHelpText>The IPMS of the selected product. Only populated if the agents picks the product at the from the IPMS object.</inlineHelpText>
        <label>IPMS</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Local_Product__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Local Product</label>
        <referenceTo>Local_Product__c</referenceTo>
        <relationshipLabel>Case Products</relationshipLabel>
        <relationshipName>Case_Products</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Number_of_Adverse_Event_Comments__c</fullName>
        <label>Number of Adverse Event Comments</label>
        <summaryFilterItems>
            <field>Case_Comment_Code__c.Comment_Code_Type__c</field>
            <operation>equals</operation>
            <value>Adverse Event</value>
        </summaryFilterItems>
        <summaryForeignKey>Case_Comment_Code__c.Case_Product__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Comment_Codes__c</fullName>
        <label>Number of Comment Codes</label>
        <summaryForeignKey>Case_Comment_Code__c.Case_Product__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_PQC_Comments__c</fullName>
        <label>Number of PQC Comments</label>
        <summaryFilterItems>
            <field>Case_Comment_Code__c.Comment_Code_Type__c</field>
            <operation>equals</operation>
            <value>Product Quality Complaint</value>
        </summaryFilterItems>
        <summaryForeignKey>Case_Comment_Code__c.Case_Product__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Product_Path__c</fullName>
        <formula>Local_Product__r.Translated_Path__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Path</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_available_for_return__c</fullName>
        <label>Product available for return</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes - Product is available</fullName>
                </value>
                <value>
                    <fullName>No - Consumer unwilling to return</fullName>
                </value>
                <value>
                    <fullName>No - Product discarded/unavailable</fullName>
                </value>
                <value>
                    <fullName>No - Product cannot be returned</fullName>
                </value>
                <value>
                    <fullName>Unknown - Written communication</fullName>
                </value>
                <value>
                    <fullName>Consumer has sent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_in_Hand__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Product in Hand</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Production_Code_Verification__c</fullName>
        <label>Production Code Verification</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Cannot Find</fullName>
                </value>
                <value>
                    <fullName>Consumer Verified</fullName>
                </value>
                <value>
                    <fullName>Not Available</fullName>
                </value>
                <value>
                    <fullName>Not Readable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Production_Code__c</fullName>
        <inlineHelpText>What is the production code?</inlineHelpText>
        <label>Production Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Return_Request_Date__c</fullName>
        <description>Date when Product Return Request is initiated.  Managed by Workflow Rule.</description>
        <label>Return Request Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Same_Version__c</fullName>
        <inlineHelpText>Have you used this particular (exact same) version of the product before?</inlineHelpText>
        <label>Used same version before?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Search_Term__c</fullName>
        <description>Search term used on email us page to find product</description>
        <label>Search Term</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Product Requested - Attempt 1</fullName>
                </value>
                <value>
                    <fullName>Product Requested - Attempt 2</fullName>
                </value>
                <value>
                    <fullName>Product Requested - Attempt 3</fullName>
                </value>
                <value>
                    <fullName>Not Received after 3 Attempts</fullName>
                </value>
                <value>
                    <fullName>Consumer has sent</fullName>
                </value>
                <value>
                    <fullName>Product Received</fullName>
                </value>
                <value>
                    <fullName>No - Consumer unwilling to return</fullName>
                </value>
                <value>
                    <fullName>No - Product discarded/unavailable</fullName>
                </value>
                <value>
                    <fullName>Photo - Attempt 1</fullName>
                </value>
                <value>
                    <fullName>Photo - Attempt 2</fullName>
                </value>
                <value>
                    <fullName>Photo - Attempt 3</fullName>
                </value>
                <value>
                    <fullName>Photo Received</fullName>
                </value>
                <value>
                    <fullName>Photo Sufficient</fullName>
                </value>
                <value>
                    <fullName>Product/Photo no longer needed</fullName>
                </value>
                <value>
                    <fullName>Photo Not Received</fullName>
                </value>
                <value>
                    <fullName>Photo - Final Attempt</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Where_Bought__c</fullName>
        <inlineHelpText>The store or location this product was purchased</inlineHelpText>
        <label>Where Bought?</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>productstatus__c</fullName>
        <description>This field indicates the status of the case product record</description>
        <label>Product Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Added</fullName>
                    <default>true</default>
                    <label>Added</label>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Case Product</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Return_Request_Date__c</columns>
        <columns>NAME</columns>
        <columns>Case__c</columns>
        <columns>Number_of_Adverse_Event_Comments__c</columns>
        <columns>Number_of_PQC_Comments__c</columns>
        <columns>Product_Path__c</columns>
        <columns>Expiration_Date__c</columns>
        <columns>GTIN_Number__c</columns>
        <columns>Local_Product__c</columns>
        <columns>Global_Product_ID__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>CP-{000000}</displayFormat>
        <label>Case Product Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Products</pluralLabel>
    <recordTypes>
        <fullName>Additional_Product_Information</fullName>
        <active>true</active>
        <description>This record type contains fields for additional product information.</description>
        <label>Additional Product Information</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>